# StockPort

./: .gitignore  README.md  pyproject.toml  requirements.txt
code/direct_portfolio_evaluation/: main.py  test.csv
code/main_work/: assembly.ipynb  fifth_form_portfolio.py  forth_obtain_historical_daily.py  mlflow_tracker.py  objectives.py  raw_data_to_df.py  scrape_fundamentals.py  third_predict_stocks.py
code/stockport/: main.py
code/tools/stock_static_information/: get_stock_ticks.py
data/ETFs/: 0050.csv  0056.csv  combined_TW.csv
data/full_stocks_data/: raw_tables.json  stocks.csv
data/recommended_stocks/: predicted_stocks.csv  stock_prices.csv
data/static_information/: US.csv  stock_tick.csv
src/ETF_components/: get_stock_components.py
src/data/ETFs/: tw100.csv
src/data/full_stocks_data/: raw_tables.json  stocks.csv
src/data/recommended_stocks/: predicted_stocks.csv  stock_prices.csv
src/playground/: data_exploration.ipynb  obtain_historical_daily.ipynb  portfolio.ipynb
src/stockport/: __init__.py  calcport.py  cli.py  info.py  portfolio.py
src/stockport/static_information/: 2023Q1.XLS  TW.csv  US.csv
src/work_flow/: 1.scrape_fundamentals.py  2.raw_data_to_df.py  3.predict_stocks.py  choose_training_model.py  obtain_historical_daily.py  predict_stocks.py  raw_data_to_df.py  scrape_fundamentals.py
tests/: test_backend.py
usage/: TW.py  US.py
